--- a/计算机科学/找工作/算法题/🥑代码随想录速记卡.md
+++ b/计算机科学/找工作/算法题/🥑代码随想录速记卡.md
@@ -1,5 +1,82 @@
 
 
+
+
+1. [关于动态规划，你该了解这些！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247497372&idx=3&sn=f713d11865f45088c3899f0df5a3c1cb&scene=21#wechat_redirect)
+2. [动态规划：斐波那契数](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247497404&idx=2&sn=7b20879b6046c199728a016cacaaa12c&scene=21#wechat_redirect)
+3. [动态规划：爬楼梯](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247497425&idx=2&sn=7cf5925aa19ab62d0b7f605ca208e40d&scene=21#wechat_redirect)
+4. [动态规划：使用最小花费爬楼梯](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247497437&idx=2&sn=aa312829658e55c9264dee30f00434a8&scene=21#wechat_redirect)
+5. [本周小结！（动态规划系列一）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486446&idx=2&sn=ca6e87ecba6d0fb5c634d1007cece5ac&scene=21#wechat_redirect)
+6. [动态规划：不同路径](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247497736&idx=2&sn=fc0b658cb197ba33daef75cd7cc88db6&scene=21#wechat_redirect)
+7. [动态规划：不同路径还不够，要有障碍！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247497756&idx=2&sn=ae38ef57cc1a9db8f39d498ece775311&scene=21#wechat_redirect)
+8. [动态规划：整数拆分，你要怎么拆？](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247498200&idx=2&sn=5d76828260b0410cc847609e4c32bcfd&scene=21#wechat_redirect)
+9. [动态规划：不同的二叉搜索树](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247498225&idx=2&sn=54ed7adb97871c52cd7d2891a2356fc8&scene=21#wechat_redirect)
+10. [本周小结！（动态规划系列二）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486564&idx=2&sn=89ebcf9fa23ef9935ebfe1d5824b9dc2&scene=21#wechat_redirect)
+
+背包问题系列：
+
+1. [动态规划：关于01背包问题，你该了解这些！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486598&idx=1&sn=dd7d0530dd7a5caef7ce70cc3d6eee3f&scene=21#wechat_redirect)
+2. [动态规划：关于01背包问题，你该了解这些！（滚动数组）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486624&idx=2&sn=96e8c6344dc25f57462b675b55ccd6e7&scene=21#wechat_redirect)
+3. [动态规划：分割等和子集可以用01背包！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486632&idx=1&sn=4bb229e3f3f5774ac684c0127c88c984&scene=21#wechat_redirect)
+4. [动态规划：最后一块石头的重量 II](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486644&idx=1&sn=548c90df36b47d67290b5667c7cec3d3&scene=21#wechat_redirect)
+5. [本周小结！（动态规划系列三）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486683&idx=2&sn=db28c1e34214a65b92cf2bd70d88ff3c&scene=21#wechat_redirect)
+6. [动态规划：目标和！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486709&idx=1&sn=75f1f43d96dbd1c5c3e281b8963e3c50&scene=21#wechat_redirect)
+7. [动态规划：一和零！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486739&idx=2&sn=e226eacf67df9b6c784264f954ae42bf&scene=21#wechat_redirect)
+8. [动态规划：关于完全背包，你该了解这些！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486748&idx=1&sn=dca9f65b75a75c50c502ae8aba279877&scene=21#wechat_redirect)
+9. [动态规划：给你一些零钱，你要怎么凑？](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486757&idx=1&sn=36f5eb60bfe4d8993cf3b3def5645a34&scene=21#wechat_redirect)
+10. [本周小结！（动态规划系列四）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486780&idx=2&sn=fdde680deb4ae6b9b3f1f08893039a73&scene=21#wechat_redirect)
+11. [动态规划：Carl称它为排列总和！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486826&idx=2&sn=80de2ae278bfd0c906d51fd012d37565&scene=21#wechat_redirect)
+12. [动态规划：以前我没得选，现在我选择再爬一次！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486833&idx=1&sn=beda10fdf8f53e8596dd3ad56ff751d5&scene=21#wechat_redirect)
+13. [动态规划：给我个机会，我再兑换一次零钱](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486848&idx=1&sn=fec1c0c36789f4929a9067910afd600b&scene=21#wechat_redirect)
+14. [动态规划：一样的套路，再求一次完全平方数](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486872&idx=2&sn=01a3b81edafd125812d8860e89a6407f&scene=21#wechat_redirect)
+15. [本周小结！（动态规划系列五）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486884&idx=1&sn=27552812d5194c7ce8eafceedc5cc222&scene=21#wechat_redirect)
+16. [动态规划：单词拆分](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486916&idx=2&sn=739861fa954827bff3591459da514443&scene=21#wechat_redirect)
+17. [动态规划：关于多重背包，你该了解这些！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486924&idx=1&sn=261b70e810ffc27c197b9b353678b87c&scene=21#wechat_redirect)
+18. [听说背包问题很难？这篇总结篇来拯救你了](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247486998&idx=1&sn=d0c7ea872aabe0d27986922089edd298&scene=21#wechat_redirect)
+
+打家劫舍系列：
+
+1. [动态规划：开始打家劫舍！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487032&idx=2&sn=51fe9348fabe8bc56c69358e790baf43&scene=21#wechat_redirect)
+2. [动态规划：继续打家劫舍！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487055&idx=2&sn=9db1e211ebc4b9b066ff699f77534c76&scene=21#wechat_redirect)
+3. [动态规划：还要打家劫舍！](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487067&idx=1&sn=bd543182c421b100c1d5db5b699666f3&scene=21#wechat_redirect)
+
+股票系列：
+
+1. [动态规划：买卖股票的最佳时机](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487087&idx=2&sn=bb070ba67efbc375b704f229604652f8&scene=21#wechat_redirect)
+2. [动态规划：本周我们都讲了这些（系列六）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487099&idx=1&sn=0215d476bbf9344e86973df907eda4c9&scene=21#wechat_redirect)
+3. [动态规划：买卖股票的最佳时机II](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487224&idx=1&sn=a6ad54c3ff36c501a35e8423405f2724&scene=21#wechat_redirect)
+4. [动态规划：买卖股票的最佳时机III](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487244&idx=2&sn=d4cefe597a0d5500adec6bff944c4bf5&scene=21#wechat_redirect)
+5. [动态规划：买卖股票的最佳时机IV](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487253&idx=1&sn=662e863724c4c8588b79669db553f9ec&scene=21#wechat_redirect)
+6. [动态规划：最佳买卖股票时机含冷冻期](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487806&idx=2&sn=26e97dd6ab523758c87d1e5e6be1b6be&scene=21#wechat_redirect)
+7. [动态规划：本周我们都讲了这些（系列七）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487314&idx=2&sn=15e34495a269fa42fba6e0cc26c4cba1&scene=21#wechat_redirect)
+8. [动态规划：买卖股票的最佳时机含手续费](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487353&idx=2&sn=fba963ef370c60328b39a620ece4e2a6&scene=21#wechat_redirect)
+9. [动态规划：股票系列总结篇](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487834&idx=1&sn=2f866d5fa27f483292bf7532b798f17a&scene=21#wechat_redirect)
+
+子序列系列：
+
+1. [动态规划：最长递增子序列](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487371&idx=2&sn=f57561d52e2322279e2c349a24757faa&scene=21#wechat_redirect)
+2. [动态规划：最长连续递增序列](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487388&idx=2&sn=87d091d532b2e2f57ad7c1eb0b56b30b&scene=21#wechat_redirect)
+3. [动态规划：最长重复子数组](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487499&idx=2&sn=560d5e6a411c562439e908316eb41a38&scene=21#wechat_redirect)
+4. [动态规划：最长公共子序列](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487526&idx=2&sn=0932bd5f65fdb4d3633df573c93cf7f1&scene=21#wechat_redirect)
+5. [动态规划：本周我们都讲了这些（系列八）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487578&idx=2&sn=e55050f9ea4ac5b3eaba4454860e3a1f&scene=21#wechat_redirect)
+6. [动态规划：不相交的线](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487692&idx=2&sn=f1690ba7dbeed45fcc1fd88b7480668f&scene=21#wechat_redirect)
+7. [动态规划：最大子序和](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487717&idx=2&sn=a54cdba5fde5d43a3fe7344064182873&scene=21#wechat_redirect)
+8. [动态规划：判断子序列](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487764&idx=2&sn=05e440c85c4b33753d4f93707cd7a6f9&scene=21#wechat_redirect)
+9. [动态规划：不同的子序列](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487826&idx=2&sn=edfb8ac9c489dcbd80922cf2dc100ae0&scene=21#wechat_redirect)
+10. [动态规划：两个字符串的删除操作](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487875&idx=2&sn=27f7496308ec699c21e73b162e6472ff&scene=21#wechat_redirect)
+11. [动态规划：本周我们都讲了这些（系列十）](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487895&idx=2&sn=1249975c3b2fbf0a99fae07b0042f711&scene=21#wechat_redirect)
+12. [动态规划：编辑距离](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247487971&idx=1&sn=675b239c68e61e0e4a2766fc95e506ad&scene=21#wechat_redirect)
+13. [为了绝杀编辑距离，我做了三步铺垫，你都知道么？](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247488013&idx=2&sn=97488de020c329c298d9621c3a45d82a&scene=21#wechat_redirect)
+14. [动态规划：回文子串](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247488076&idx=2&sn=1aa4cae1c4905ab36c6e2d57b9baa4e1&scene=21#wechat_redirect)
+15. [动态规划：最长回文子序列](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247488113&idx=2&sn=0061522496a3c8661d141715c67c2e31&scene=21#wechat_redirect)
+16. [动态规划总结篇](https://mp.weixin.qq.com/s?__biz=MzUxNjY5NTYxNA==&mid=2247489282&idx=1&sn=770ff33965357e822addc2b88cf31697&scene=21#wechat_redirect)
+
+
+
+----
+
+
+
 <img src="https://tva1.sinaimg.cn/large/008vxvgGgy1h7hlu87jv9j30mo0zoznl.jpg" alt="image-20221025171711415" style="zoom:50%;" />
 
 
