--- a/计算机科学/找工作/算法题/🥑🥑🥑.md
+++ b/计算机科学/找工作/算法题/🥑🥑🥑.md
@@ -3,4 +3,80 @@
 - 螺旋矩阵
 - 一维二维前缀和
 - 二维数组
+- 零钱问题
+  - https://leetcode.cn/problems/coin-change/submissions/364402186/
+  - https://leetcode.cn/problems/coin-change-ii/
+
+```java
+class Solution {
+    // dp[i]凑到价值i所用的最少的硬币数量
+    public int coinChange(int[] coins, int amount) {
+        int[] dp = new int[amount+1];
+        Arrays.fill(dp,amount+1);
+        dp[0]=0;
+        for(int i =1;i<dp.length;i++){
+            for(int coin:coins){
+                if(i-coin<0){
+                    continue;
+                }
+                dp[i]=Math.min(dp[i],dp[i-coin]+1);
+            }
+        }
+        if(dp[amount]==amount+1){
+            return -1;
+        }
+        return dp[amount];
+    }
+}
+-----------------------------------------------------------------------------------------------
+int change(int amount, int[] coins) {
+    int n = coins.length;
+    int[][] dp = amount int[n + 1][amount + 1];
+    // base case
+    for (int i = 0; i <= n; i++) 
+        dp[i][0] = 1;
+
+    for (int i = 1; i <= n; i++) {
+        for (int j = 1; j <= amount; j++)
+            if (j - coins[i-1] >= 0)
+                dp[i][j] = dp[i - 1][j] 
+                         + dp[i][j - coins[i-1]];
+            else 
+                dp[i][j] = dp[i - 1][j];
+    }
+    return dp[n][amount];
+}
+
+class Solution {
+    public int change(int amount, int[] coins) {
+        int[] dp = new int[amount + 1];
+        dp[0] = 1;
+        for (int coin : coins) {
+            // 记录每添加一种面额的零钱，总金额j的变化
+            for (int i = coin; i <= amount; i++) {
+                    // 在上一钟零钱状态的基础上增大
+                    // 例如对于总额5，当只有面额为1的零钱时，只有一种可能 5x1
+                    // 当加了面额为2的零钱时，除了原来的那一种可能外
+                    // 还加上了组合了两块钱的情况，而总额为5是在总额为3的基础上加上两块钱来的
+                    // 所以就加上此时总额为3的所有组合情况
+                dp[i] = dp[i] + dp[i - coin];
+            }
+            // 5
+            // [1,2,5]
+            // 1 1 1 1 1 1  
+            // 1 1 2 2 3 3  
+            // 1 1 2 2 3 4  
+            for(int i =0;i<dp.length;i++){
+                System.out.print(dp[i]+" ");
+            }
+            System.out.println(" ");
+        }
+        return dp[amount];
+    }
+}
+```
+
+
+
+- 楼梯问题
 - 
