--- a/计算机科学/找工作/算法题/【动态规划-经典：子集背包问题】.md
+++ b/计算机科学/找工作/算法题/【动态规划-经典：子集背包问题】.md
@@ -62,8 +62,10 @@ public boolean canPartition(int[] nums) {
 
     for (int i = 1; i < dp.length; i++) {
         for (int j = 1; j < dp[0].length; j++) {
-            if (j - nums[i - 1] < 0) dp[i][j] = dp[i - 1][j];
-            else dp[i][j] = dp[i - 1][j] || dp[i - 1][j - nums[i - 1]];
+            if (j - nums[i - 1] < 0) 
+              	dp[i][j] = dp[i - 1][j];
+            else 
+              	dp[i][j] = dp[i - 1][j] || dp[i - 1][j - nums[i - 1]];
         }
     }
     return dp[nums.length][target];
