--- a/语言学/🥑1368个单词就够了-日英对照.md
+++ b/语言学/🥑1368个单词就够了-日英对照.md
@@ -1721,7 +1721,7 @@
 ##### 原因
 
 - cause
-    - **原因、理由、根拠**
+    - **原因、理由**
 
 
 - reason
@@ -1758,7 +1758,7 @@
 
 
 - process
-  - **過程、経過**
+  - **過程(かてい)、経過（けいか）**
 
 ```java
 关于属性类名词的解读
@@ -1772,7 +1772,693 @@
 
 ---
 
+### ----------------------------
 
+### 🥑让感觉飞起来：形容词【208个】
+
+#### 物的属性与构成
+
+##### 大小
+
+- big
+  - **大きい**
+
+
+- huge
+  - **巨大な、莫大な、大きい**
+- little
+  - **小さい**
+- small
+  - **小さい**
+- medium
+  - **M サイズ、中**
+
+##### 高低
+
+- high
+  - **高い**
+
+
+- low
+  - **低い**
+
+##### 长短
+
+- long
+  - **長い**
+
+
+- short
+  - **短い**
+- tall
+  - **高い**
+
+##### 深浅
+
+- deep
+  - **深い**
+
+
+- shallow
+  - **浅い**
+
+##### 粗细
+
+- thick
+  - **厚い**
+
+
+- thin
+  - **薄い**
+- fat
+  - **太い**
+- slim
+  - **ほっそりした**
+
+##### 宽窄
+
+- narrow
+  - **狭い、細い**
+
+
+- wide
+  - **広い**
+
+##### 重量
+
+- heavy
+  - **重い**
+
+
+- light
+  - **軽い**
+
+##### 正斜
+
+- straight
+  - **まっすぐな**
+
+
+- curved
+  - **曲がった（まがる）**
+- flat
+  - **平らな、平たい**
+
+##### 形状
+
+- round
+  - **丸い**
+
+
+- square
+  - **正方形、四角、四角いもの**
+
+##### 距离
+
+- near
+  - **(空間・時間的に)近く**
+
+
+- far
+  - **遠くに**
+
+##### 事物与空间
+
+- full
+  - **いっぱい**
+
+
+- empty
+  - **空(から)の**
+- blank
+  - **空(から)の**
+- bare
+  - **裸(はだか)**
+- dirty
+  - **よごれた、汚い**
+
+##### 时间
+
+- new
+  - **新しい**
+
+
+- fresh
+  - **新鮮な、新しい**
+
+##### 数量
+
+- extra
+  - **余分の**
+
+
+- only
+  - **唯一の、ただ…だけの**
+- single
+  - **たったひとつの、ただ 1 個の、ただのひとつも(ない)、独身の、独りの、一人用の、シングルの**
+- poor
+  - **貧しい、貧乏な**
+- rich
+  - **金持ちの、豊かな、金持ち**
+- slight
+  - **(数・量・程度など)わずかな、少しばかりの、ちょっとした、少しも(…ない)**
+- total
+  - **全体の、総計の**
+
+##### 质地
+
+- hard
+  - **堅い、硬い、固い**
+
+
+- soft
+  - **柔らかい、軟らかい、硬くない**
+- tough
+  - **(切りにくい、またはかみ切れなくて)かたい、こわい、粘りのある、頑丈な、タフな**
+- tender
+  - **柔らかい、柔らかな**
+- smooth
+  - **(表面などの)なめらかな、すべすべした、平坦(へいたん)な**
+- rough
+  - **(手ざわりが)粗い、ざらざらした**
+- sharp
+  - **鋭い**
+- blunt
+  - **鈍い**
+- fresh
+  - **新鮮な、新しい**
+- raw
+  - **生(なま)の**
+- pure
+  - **(まじりけのない意味で)純粋な**
+- plain
+  - **明白な、わかりやすい、簡単な**
+- even
+  - **…でさえ(も)、…すら、(それどころか)いやまったく、いっそう、なお**
+
+##### 力量
+
+- strong
+  - **力がある**
+  - **体力のある、強健な、強壮な、丈夫な、(…に)強くて、病気が治って、体力が回復して、頑丈な、強固な、堅固な**
+
+
+- weak
+  - **力が足りない**
+  - **弱い、弱々しい、虚弱な、力のない**
+- tight
+  - **堅い、きつい、しっかり**
+- loose
+  - **放たれた、自由な、解放されて、解き放たれて、結んでない、離れている、束ねてない、包装してない、ばらの、ゆるんだ**
+- firm
+  - **(質の)硬い**
+- tense
+  - **ぴんと張った、張り詰めた、緊張した、(緊張しすぎて)不自然な、堅苦しい、筋肉の張った**
+
+##### 状态
+
+- liquid
+  - **液体**
+
+
+- gas
+  - **気体、(燃料・暖房・調理用)ガス**
+- solid
+  - **(気体・液体でなくて)固体の、固形体の**
+
+##### 温度
+
+- hot
+  - **(温度上「冷たい」に対して)熱い、温度の高い**
+
+
+- warm
+  - **暖かい、温暖な**
+- cold
+  - **寒い、冷たい**
+- cool
+  - **涼しい**
+
+##### 湿度
+
+- dry
+  - **乾いた、湿っていない、乾燥した**
+
+
+- wet
+
+  - **ぬれた、湿った、湿気のある**
+
+
+##### 亮度
+
+- bright
+  - **明るい、輝く**
+
+
+- dark
+  - **(明かりのない)暗い**
+- dull
+  - **鈍い**
+
+##### 味道
+
+- sweet
+  - **甘い、甘口の**
+
+
+- bitter
+  - **苦い、苦みの、つらい**
+- delicious
+  - **とてもおいしい、うまい**
+- sour
+  - **酸っぱい**
+- spicy
+  - 假名日语
+
+
+声音
+
+- loud
+  - **高い、大声の、音が高い、騒々しい、うるさい**
+
+
+- quiet
+  - **静かな、穏やかな**
+
+#### 人的属性与构成
+
+##### 时间
+
+- young
+  - **若い、幼い**
+
+
+- old
+  - **年取った、老いた、老年の、老人たち、(満)…歳の、年長の、年上の、古い**
+
+##### 身体
+
+- hungry
+  - **飢えた、腹のへった**
+
+
+- ill
+  - **病気で**
+- sick
+  - **病気の**
+- tired
+  - **疲れた**
+- blind
+  - **見えない**
+- sore
+  - **痛い**
+- born
+  - **bear「生む」の過去分詞**
+- pregnant
+  - **妊娠した**
+- alive
+  - **生きて、生きている者**
+
+##### 行为
+
+- busy
+  - **忙しい、多忙な**
+
+
+- violent
+  - **激しい、猛烈な、激烈な、乱暴な**
+- wild
+  - **野生の**
+
+##### 外表
+
+- beautiful
+  - **美しい、きれいな**
+
+
+- ugly
+  - **醜い、見苦しい**
+- sexy
+  - **性的魅力のある、セクシーな**
+
+##### 心智
+
+- smart
+  - **頭のよい**
+
+
+- clever
+  - **賢い**
+- stupid
+  - **頭良くない**
+- confused
+  - **困惑(こんわく)、惑、戸惑う（とまどう）**
+- awake
+  - **起こす、呼び起こす、自覚させる**
+- asleep
+  - **眠って**
+- familiar
+  - **よく知っている、見慣れている、ありふれた、熟知して、精通して、よく知られて**
+- patient
+  - **忍耐強い（にんたい）、辛抱強い**
+
+##### 态度
+
+- polite
+  - **礼儀正しい**
+
+
+- lazy
+  - **怠惰な、不精な、眠気を誘う、もの憂げな、けだるい、動きののろい**
+- honest
+  - **正直な（しょうじき）、誠実な（せいじつ）、信頼できる**
+- rude
+  - **失礼な、無礼な**
+- brave
+  - **勇敢な（ゆうかん）、勇ましい**
+- aggressive
+  - **侵略的な、攻撃的な**
+
+##### 情感
+
+- interested
+  - **興味をもった**
+  - **興味があって**
+
+
+- curious
+  - **好奇心の強い（こうきしんs）**
+- proud
+  - **誇らしげな、自慢する、得意な、(…を)誇って、自慢して**
+- sure
+  - **確信して、確かで、(…を)確信して、(…に)自信を持って**
+- confident
+  - **(…を)確信して、確信して、自信に満ちた**
+
+##### 心情
+
+- happy
+  - **幸福な、幸せな、楽しい、満足な**
+
+
+- glad
+  - **うれしくて**
+- sad
+  - **悲しい（かなしい）**
+- upset
+  - **心配する**
+- sorry
+  - **気の毒に思って、(…が)気の毒で**
+- guilty
+  - 
+- calm
+  - **穏やかな、静かな、平静な、落ち着いた**
+- afraid
+  - **(…を)恐れて、怖がって**
+- angry
+  - **怒って、腹を立てて、怒りの**
+- crazy
+  - **熱狂的(ねっきょうてき)**
+- mad
+  - 
+- excited
+  - **興奮した、(…に)興奮して、興奮して**
+- bored
+  - **退屈、つまらない、くだらない**
+- disappointed
+  - **失望した（しつぼう）**
+- jealous
+  - **羨む（うらやむ）**
+- lonely
+  - **孤独な（こどく）、ひとりぼっちの、(孤独のために)寂しい**
+
+#### 事的属性与构成
+
+##### 难度
+
+- easy
+  - **容易な、平易な、やさしい、やさしくて**
+  - **易い（やすい）**
+
+
+- hard
+  - **堅い、硬い、固い**
+- difficult
+  - **困難な、難しい、理解しにくい**
+
+##### 时间
+
+- late
+  - **(ある時刻に)遅れた、遅い、遅刻した**
+
+
+- due
+  - **締め切り**
+- urgent
+  - **緊急の**
+- efficient
+  - **効率的**
+
+##### 可能性
+
+- possible
+  - **可能な**
+
+
+- available
+  - **(すぐに)利用できる、入手できる、得られる**
+
+##### 安全性
+
+- dangerous
+  - **危険な、危ない、物騒な**
+
+
+- safe
+  - **安全な**
+
+##### 其他
+
+- wrong
+  - **不正で、よくなくて、悪くて、正しくない、誤った、間違った、(…に)間違っていて、不適当な、不適切な**
+
+
+- strict
+  - **厳しい、厳格な（げんかく）**
+- correct
+  - **(事実に合致して)正しい、間違いのない、正確な**
+- proper
+  - **(目的・状況などにかなって)適切な、ふさわしい（相応しい）、ちゃんとした、(…に)適切な**
+- lucky
+  - **運のよい、幸運な**
+- fair
+  - **公正な（こうせい）、公平な、正当な、(…に)公平で、適正な**
+- successful
+  - **成功した、上出来の**
+
+#### 综合属性
+
+##### 品质（好）
+
+- good
+  - **(品質・内容・外観など)良い、優秀な、見事な**
+
+
+- nice
+  - **かわいい、魅力のある、おいしい、見事な**
+- fine
+  - **すばらしい、見事な、りっぱな、(技能の)優れた、優秀な**
+- great
+  - **(規模・程度など)大きい、大…**
+  - **名高い、著名な**
+- perfect
+  - **完全な、申し分のない、理想的な**
+- wonderful
+  - **すばらしい、すてきな、不思議な、驚くべき、驚嘆すべき**
+- amazing
+  - **驚くべき、びっくりするような、すばらしい**
+- excellent
+  - **優秀な**
+
+##### 品质（坏）
+
+- bad
+  - **悪い**
+
+
+- terrible
+  - **恐ろしい、怖い、ものすごい、ひどい、つらい、厳しい、非常に悪い**
+- awful
+  - **ひどい、(程度が)非常な、すごい**
+
+##### 真实性
+
+- real
+  - **真の、本当の**
+
+
+- true
+  - **真実の、本当の、本来の**
+- false
+  - **間違った、誤った**
+- fake
+  - **(だます目的で)偽造する（ぎぞう）**
+
+##### 完整性
+
+- complete
+  - **全部の、完璧(かんぺき)な、(…を)完備して、完全な**
+
+##### 精确性
+
+- exact
+  - **正確な、きっかりの、ちょうどの**
+
+
+- specific
+  - **明確な、具体的な、特定の**
+
+##### 复杂性
+
+- complicated
+  - **複雑な**
+  - **わかりにくい**
+
+
+- simple
+  - **簡単な**
+
+##### 其他
+
+- fun
+  - **おもしろさ、おもしろいこと**
+
+
+- horrible
+  - **恐ろしい、ものすごい**
+- weird
+  - **変な、奇妙な**
+  - **おかしい**
+- strange
+  - **奇妙な、不思議な、変な**
+- comfortable
+  - **快適な、気持ちのよい**
+- incredible
+  - **信じられない、信用できない、驚くべき**
+- gross
+  - **総体の、全体の**
+
+#### 事物关系
+
+##### 特殊性
+
+- special
+  - **特別の、特殊の、独特の、特有の**
+  - **専用の、個人用の、専門の、専攻の、特別用の**
+
+
+- regular
+  - **規則正しい、規則的な**
+
+##### 一致性
+
+- same
+  - **同じ**
+
+
+- different
+  - **異なった、違った、別の、同じでない**
+
+##### 普遍性
+
+- typical
+  - **典型的な（てんけい）、代表的な**
+
+
+- normal
+  - **一般の**
+  - **一般的な**
+- common
+  - **共通の、共同の（きょうど）、共有の、(…に)共通して**
+- general
+  - **一般の**
+  - **一般的な**
+- popular
+  - **人気のある、評判のよい**
+- average
+  - **平均、平均値**
+- particular
+  - **特にこの、特有の、独特の、個人としての、個々の、各自の、特別の、格別の**
+- own
+  - **自分自身の、自分の、個人的な**
+
+##### 重要性
+
+- serious
+  - **まじめな、本気の、真剣な**
+
+
+- causal
+  - **原因の、原因となる、因果関係の、原因を示す**
+- important
+  - **重要な、重大な、大切な**
+- main
+  - **主な、主要な（しゅよう）**
+- formal
+  - **正式の、公式の**
+- professional
+  - **専門的な、プロ(級)の**
+
+##### 必要性
+
+- necessary
+  - **必要な**
+
+##### 关联性
+
+- free
+  - **自由な、無料、空き時間、暇**
+
+
+- relative
+  - **比較上の**
+- legal
+  - **法律(上)の**
+- physical
+  - **物質(的)の、物理学(上)の**
+- mental
+  - **心の、精神(的)の**
+- local
+  - **地方の、地元の**
+- native
+  - **原地の（げんち）**
+- international
+  - **国際(上)の、国際間の、国際的な**
+- cheap
+  - **安い、安価な**
+- expensive
+  - **高価な、費用のかかる**
+- separate
+  - **離す、切り離す、引き離す、(…を)切り離す、分離する、(…を)分けている、隔てている、(…を)(…に)分ける、区切る、(…を)分散する**
+- public
+  - **公共の、公開の**
+- worth
+  - **の価値があって、値して、価値があって**
+
+```java
+关于形容词的解读
+
+总单词量：208个
+
+类别：47个
+```
+
+
+
+---
+
+### ----------------------------
 
 ### 🥑单纯型动词：广交天下朋友【114个】
 
@@ -1799,17 +2485,17 @@
 得到某物　
 
 - get
-  - **受け(取)る、(要求・懇願によって)もらう、得る、持つようになる、(…で)受ける、身につける、(うまく)する、してもらう、される、手に入れる**
+  - **受け(取)る、もらう、得る、持つようになる、(…で)受ける、身につける、(うまく)する、してもらう、される、手に入れる**
 
 给出某物　
 
 - give
-  - **与える :、あげる、(…に)提供する、授ける、(引き)渡す、(手)渡す、出す、施す、(…を)引き渡す、預ける**
+  - **与える 、あげる、(…に)提供する、授ける、(引き)渡す、(手)渡す、出す、(…を)引き渡す、預ける**
 
 拿到某物　
 
 - take
-  - **(手などで)取る、(…を)取る、つかむ、(…を)抱く**
+  - **(…を)取る、つかむ、(…を)抱く**
 
 #### 终点位置
 
@@ -1851,11 +2537,11 @@
 位置保持不变　
 
 - stay
-    - **とどまる、(場所に)とどまる**
+    - **止まる（とどまる）、留まる（とどまる）、(場所に)とどまる**
 
 
 - hang
-  - **かける**
+  - **掛ける（かける）**
 - settle
 
   - **解決する**
@@ -1866,12 +2552,12 @@
 一事物到另一事物上面　
 
 - cover
-  - **(…を)(…で)おおう、かぶせる**
+  - **(…を)(…で)覆う（おおう）、被せる（かぶせる）**
 
 一事物到另一事物下面　
 
 - support
-  - **支える、支援する**
+  - **支える、支援する、応援する**
 
 两事物混合　
 
@@ -1881,7 +2567,7 @@
 两事物互换　
 
 - switch
-  - **(電気の)スイッチ、(思いがけない)転換、変更**
+  - **(電気の)スイッチ、(思いがけない)転換、変更、変える**
 
 两事物相连　
 
@@ -1890,9 +2576,9 @@
 
 
 - join
-  - **結合する、つなぐ、一緒になる**
+  - **結合する（けつごう）、つなぐ、一緒になる**
 - connect
-  - **連結する、つなぐ、結合する、接続する、結びつける**
+  - **連結する、つなぐ、結合する、接続する（せつぞく）、結びつける**
 - stick
   - **貼る**
 - tie
@@ -1914,7 +2600,7 @@
 从一个点到另一个点　
 
 - move
-    - **(…を)動かす、移す、移動させる、動かす、(…を)引っ越す**
+    - **(…を)動かす(うごかす)、移す（うつす）、移動させる（いどう）、(…を)引っ越す**
 
 
 - shift
@@ -1941,7 +2627,7 @@
 高点往低点　
 
 - drop
-    - 
+    - **落ちる（おちる）、落とす**
 
 
 - fall
@@ -1970,11 +2656,11 @@
 
 
 - roll
-  - **ころがる**
+  - **転がる（ころがる）**
 - shake
   - **(上下にさっと)振る（ふる）、(…を)振り動かす、揺すぶる**
 - screw
-  - **ねじ**
+  - **捻る（ねじ）**
 
 #### 速度
 
@@ -1985,16 +2671,16 @@
 
 
 - rush
-  - **急ぐ、急行する**
+  - **急ぐ（いそぐ）、急行する**
 - hurry
-  - **大急ぎ**
+  - **大急ぎ（だいいそぎ）**
 
 #### 力量
 
 轻轻接触　
 
 - touch
-  - **(…に)(手で)触れる、さわってみる、(…で)(…に)触れる、触れる、(…を)(…に)あてる、接触する**
+  - **(…に)(手で)触れる（ふれる）、接触する（せっしょく）**
 
 用力接触　
 
@@ -2176,7 +2862,7 @@
 
 
 - fold
-  - **折る**
+  - **折る（おる）**
 - twist
   - 
 - stretch
@@ -2905,693 +3591,7 @@
 
 ---
 
-
-
-### 🥑让感觉飞起来：形容词【208个】
-
-#### 物的属性与构成
-
-##### 大小
-
-- big
-    - **大きい**
-
-
-- huge
-  - **巨大な、莫大な、大きい**
-- little
-  - **小さい**
-- small
-  - **小さい**
-- medium
-  - **M サイズ、中**
-
-##### 高低
-
-- high
-    - **高い**
-
-
-- low
-  - **低い**
-
-##### 长短
-
-- long
-    - **長い**
-
-
-- short
-  - **短い**
-- tall
-  - **高い**
-
-##### 深浅
-
-- deep
-    - **深い**
-
-
-- shallow
-  - **浅い**
-
-##### 粗细
-
-- thick
-    - **厚い**
-
-
-- thin
-  - **薄い**
-- fat
-  - **太い**
-- slim
-  - **ほっそりした**
-
-##### 宽窄
-
-- narrow
-    - **狭い、細い**
-
-
-- wide
-  - **広い**
-
-##### 重量
-
-- heavy
-    - **重い**
-
-
-- light
-  - **軽い**
-
-##### 正斜
-
-- straight
-    - **まっすぐな**
-
-
-- curved
-  - **曲がった（まがる）**
-- flat
-  - **平らな、平たい**
-
-##### 形状
-
-- round
-    - **丸い**
-
-
-- square
-  - **正方形、四角、四角いもの**
-
-##### 距离
-
-- near
-    - **(空間・時間的に)近く**
-
-
-- far
-  - **遠くに**
-
-##### 事物与空间
-
-- full
-    - **いっぱい**
-
-
-- empty
-  - **空(から)の**
-- blank
-  - **空(から)の**
-- bare
-  - **裸(はだか)**
-- dirty
-  - **よごれた、汚い**
-
-##### 时间
-
-- new
-    - **新しい**
-
-
-- fresh
-  - **新鮮な、新しい**
-
-##### 数量
-
-- extra
-    - **余分の**
-
-
-- only
-  - **唯一の、ただ…だけの**
-- single
-  - **たったひとつの、ただ 1 個の、ただのひとつも(ない)、独身の、独りの、一人用の、シングルの**
-- poor
-  - **貧しい、貧乏な**
-- rich
-  - **金持ちの、豊かな、金持ち**
-- slight
-  - **(数・量・程度など)わずかな、少しばかりの、ちょっとした、少しも(…ない)**
-- total
-  - **全体の、総計の**
-
-##### 质地
-
-- hard
-    - **堅い、硬い、固い**
-
-
-- soft
-  - **柔らかい、軟らかい、硬くない**
-- tough
-  - **(切りにくい、またはかみ切れなくて)かたい、こわい、粘りのある、頑丈な、タフな**
-- tender
-  - **柔らかい、柔らかな**
-- smooth
-  - **(表面などの)なめらかな、すべすべした、平坦(へいたん)な**
-- rough
-  - **(手ざわりが)粗い、ざらざらした**
-- sharp
-  - **鋭い**
-- blunt
-  - **鈍い**
-- fresh
-  - **新鮮な、新しい**
-- raw
-  - **生(なま)の**
-- pure
-  - **(まじりけのない意味で)純粋な**
-- plain
-  - **明白な、わかりやすい、簡単な**
-- even
-  - **…でさえ(も)、…すら、(それどころか)いやまったく、いっそう、なお**
-
-##### 力量
-
-- strong
-    - **力がある**
-    - **体力のある、強健な、強壮な、丈夫な、(…に)強くて、病気が治って、体力が回復して、頑丈な、強固な、堅固な**
-
-
-- weak
-  - **力が足りない**
-  - **弱い、弱々しい、虚弱な、力のない**
-- tight
-  - **堅い、きつい、しっかり**
-- loose
-  - **放たれた、自由な、解放されて、解き放たれて、結んでない、離れている、束ねてない、包装してない、ばらの、ゆるんだ**
-- firm
-  - **(質の)硬い**
-- tense
-  - **ぴんと張った、張り詰めた、緊張した、(緊張しすぎて)不自然な、堅苦しい、筋肉の張った**
-
-##### 状态
-
-- liquid
-    - **液体**
-
-
-- gas
-  - **気体、(燃料・暖房・調理用)ガス**
-- solid
-  - **(気体・液体でなくて)固体の、固形体の**
-
-##### 温度
-
-- hot
-    - **(温度上「冷たい」に対して)熱い、温度の高い**
-
-
-- warm
-  - **暖かい、温暖な**
-- cold
-  - **寒い、冷たい**
-- cool
-  - **涼しい**
-
-##### 湿度
-
-- dry
-    - **乾いた、湿っていない、乾燥した**
-
-
-- wet
-
-  - **ぬれた、湿った、湿気のある**
-
-
-##### 亮度
-
-- bright
-    - **明るい、輝く**
-
-
-- dark
-  - **(明かりのない)暗い**
-- dull
-  - **鈍い**
-
-##### 味道
-
-- sweet
-    - **甘い、甘口の**
-
-
-- bitter
-  - **苦い、苦みの、つらい**
-- delicious
-  - **とてもおいしい、うまい**
-- sour
-  - **酸っぱい**
-- spicy
-  - 
-
-
-声音
-
-- loud
-    - **高い、大声の、音が高い、騒々しい、うるさい**
-
-
-- quiet
-  - **静かな、穏やかな**
-
-#### 人的属性与构成
-
-##### 时间
-
-- young
-    - **若い、幼い**
-
-
-- old
-  - **年取った、老いた、老年の、老人たち、(満)…歳の、年長の、年上の、古い**
-
-##### 身体
-
-- hungry
-    - **飢えた、腹のへった**
-
-
-- ill
-  - **病気で**
-- sick
-  - **病気の**
-- tired
-  - **疲れた**
-- blind
-  - **見えない**
-- sore
-  - **痛い**
-- born
-  - **bear「生む」の過去分詞**
-- pregnant
-  - **妊娠した**
-- alive
-  - **生きて、生きている者**
-
-##### 行为
-
-- busy
-    - **忙しい、多忙な**
-
-
-- violent
-  - **激しい、猛烈な、激烈な、乱暴な**
-- wild
-  - **野生の**
-
-##### 外表
-
-- beautiful
-    - **美しい、きれいな**
-
-
-- ugly
-  - **醜い、見苦しい**
-- sexy
-  - **性的魅力のある、セクシーな**
-
-##### 心智
-
-- smart
-    - **頭のよい**
-
-
-- clever
-  - **賢い**
-- stupid
-  - **頭良くない**
-- confused
-  - 
-- awake
-  - **起こす、呼び起こす、自覚させる**
-- asleep
-  - **眠って**
-- familiar
-  - **よく知っている、見慣れている、ありふれた、熟知して、精通して、よく知られて**
-- patient
-  - **忍耐強い（にんたい）、辛抱強い**
-
-##### 态度
-
-- polite
-    - **礼儀正しい**
-
-
-- lazy
-  - **怠惰な、不精な、眠気を誘う、もの憂げな、けだるい、動きののろい**
-- honest
-  - **正直な（しょうじき）、誠実な（せいじつ）、信頼できる**
-- rude
-  - **失礼な、無礼な**
-- brave
-  - **勇敢な（ゆうかん）、勇ましい**
-- aggressive
-  - **侵略的な、攻撃的な**
-
-##### 情感
-
-- interested
-    - **興味をもった**
-    - **興味があって**
-
-
-- curious
-  - **好奇心の強い（こうきしんs）**
-- proud
-  - **誇らしげな、自慢する、得意な、(…を)誇って、自慢して**
-- sure
-  - **確信して、確かで、(…を)確信して、(…に)自信を持って**
-- confident
-  - **(…を)確信して、確信して、自信に満ちた**
-
-##### 心情
-
-- happy
-    - **幸福な、幸せな、楽しい、満足な**
-
-
-- glad
-  - **うれしくて**
-- sad
-  - **悲しい（かなしい）**
-- upset
-  - **心配する**
-- sorry
-  - **気の毒に思って、(…が)気の毒で**
-- guilty
-  - 
-- calm
-  - **穏やかな、静かな、平静な、落ち着いた**
-- afraid
-  - **(…を)恐れて、怖がって**
-- angry
-  - **怒って、腹を立てて、怒りの**
-- crazy
-  - 
-- mad
-  - 
-- excited
-  - **興奮した、(…に)興奮して、興奮して**
-- bored
-  - **退屈、つまらない、くだらない**
-- disappointed
-  - **失望した（しつぼう）**
-- jealous
-  - **羨む（うらやむ）**
-- lonely
-  - **孤独な（こどく）、ひとりぼっちの、(孤独のために)寂しい**
-
-#### 事的属性与构成
-
-##### 难度
-
-- easy
-    - **容易な、平易な、やさしい、やさしくて**
-    - **易い（やすい）**
-
-
-- hard
-  - **堅い、硬い、固い**
-- difficult
-  - **困難な、難しい、理解しにくい**
-
-##### 时间
-
-- late
-    - **(ある時刻に)遅れた、遅い、遅刻した**
-
-
-- due
-  - **締め切り**
-- urgent
-  - **緊急の**
-- efficient
-  - **効率的**
-
-##### 可能性
-
-- possible
-    - **可能な**
-
-
-- available
-  - **(すぐに)利用できる、入手できる、得られる**
-
-##### 安全性
-
-- dangerous
-    - **危険な、危ない、物騒な**
-
-
-- safe
-  - **安全な**
-
-##### 其他
-
-- wrong
-    - **不正で、よくなくて、悪くて、正しくない、誤った、間違った、(…に)間違っていて、不適当な、不適切な**
-
-
-- strict
-  - **厳しい、厳格な（げんかく）**
-- correct
-  - **(事実に合致して)正しい、間違いのない、正確な**
-- proper
-  - **(目的・状況などにかなって)適切な、ふさわしい（相応しい）、ちゃんとした、(…に)適切な**
-- lucky
-  - **運のよい、幸運な**
-- fair
-  - **公正な（こうせい）、公平な、正当な、(…に)公平で、適正な**
-- successful
-  - **成功した、上出来の**
-
-#### 综合属性
-
-##### 品质（好）
-
-- good
-    - **(品質・内容・外観など)良い、優秀な、見事な**
-
-
-- nice
-  - **かわいい、魅力のある、おいしい、見事な**
-- fine
-  - **すばらしい、見事な、りっぱな、(技能の)優れた、優秀な**
-- great
-  - **(規模・程度など)大きい、大…**
-  - **名高い、著名な**
-- perfect
-  - **完全な、申し分のない、理想的な**
-- wonderful
-  - **すばらしい、すてきな、不思議な、驚くべき、驚嘆すべき**
-- amazing
-  - **驚くべき、びっくりするような、すばらしい**
-- excellent
-  - **優秀な**
-
-##### 品质（坏）
-
-- bad
-    - **悪い**
-
-
-- terrible
-  - **恐ろしい、怖い、ものすごい、ひどい、つらい、厳しい、非常に悪い**
-- awful
-  - **ひどい、(程度が)非常な、すごい**
-
-##### 真实性
-
-- real
-    - **真の、本当の**
-
-
-- true
-  - **真実の、本当の、本来の**
-- false
-  - **間違った、誤った**
-- fake
-  - **(だます目的で)偽造する（ぎぞう）**
-
-##### 完整性
-
-- complete
-  - **全部の、完璧(かんぺき)な、(…を)完備して、完全な**
-
-##### 精确性
-
-- exact
-    - **正確な、きっかりの、ちょうどの**
-
-
-- specific
-  - **明確な、具体的な、特定の**
-
-##### 复杂性
-
-- complicated
-    - **複雑な**
-    - **わかりにくい**
-
-
-- simple
-  - **簡単な**
-
-##### 其他
-
-- fun
-    - **おもしろさ、おもしろいこと**
-
-
-- horrible
-  - **恐ろしい、ものすごい**
-- weird
-  - **変な、奇妙な**
-  - **おかしい**
-- strange
-  - **奇妙な、不思議な、変な**
-- comfortable
-  - **快適な、気持ちのよい**
-- incredible
-  - **信じられない、信用できない、驚くべき**
-- gross
-  - **総体の、全体の**
-
-#### 事物关系
-
-##### 特殊性
-
-- special
-    - **特別の、特殊の、独特の、特有の**
-    - **専用の、個人用の、専門の、専攻の、特別用の**
-
-
-- regular
-  - **規則正しい、規則的な**
-
-##### 一致性
-
-- same
-    - **同じ**
-
-
-- different
-  - **異なった、違った、別の、同じでない**
-
-##### 普遍性
-
-- typical
-    - **典型的な（てんけい）、代表的な**
-
-
-- normal
-  - **一般の**
-  - **一般的な**
-- common
-  - **共通の、共同の（きょうど）、共有の、(…に)共通して**
-- general
-  - **一般の**
-  - **一般的な**
-- popular
-  - **人気のある、評判のよい**
-- average
-  - **平均、平均値**
-- particular
-  - **特にこの、特有の、独特の、個人としての、個々の、各自の、特別の、格別の**
-- own
-  - **自分自身の、自分の、個人的な**
-
-##### 重要性
-
-- serious
-    - **まじめな、本気の、真剣な**
-
-
-- causal
-  - **原因の、原因となる、因果関係の、原因を示す**
-- important
-  - **重要な、重大な、大切な**
-- main
-  - **主な、主要な（しゅよう）**
-- formal
-  - **正式の、公式の**
-- professional
-  - **専門的な、プロ(級)の**
-
-##### 必要性
-
-- necessary
-  - **必要な**
-
-##### 关联性
-
-- free
-    - **自由な**
-
-
-- relative
-  - **比較上の**
-- legal
-  - **法律(上)の**
-- physical
-  - **物質(的)の、物理学(上)の**
-- mental
-  - **心の、精神(的)の**
-- local
-  - **地方の、地元の**
-- native
-  - **原地の（げんち）**
-- international
-  - **国際(上)の、国際間の、国際的な**
-- cheap
-  - **安い、安価な**
-- expensive
-  - **高価な、費用のかかる**
-- separate
-  - **離す、切り離す、引き離す、(…を)切り離す、分離する、(…を)分けている、隔てている、(…を)(…に)分ける、区切る、(…を)分散する**
-- public
-  - **公共の、公開の**
-- worth
-  - **の価値があって、値して、価値があって**
-
-```java
-关于形容词的解读
-
-总单词量：208个
-
-类别：47个
-```
-
-
-
----
-
-
+### ----------------------------
 
 ### 🥑英语的灵魂：介词【48个】
 
@@ -3708,7 +3708,7 @@
 #### 时间
 
 - during
-    - **ある特定の期間の間に**
+    - **ある特定の期間（きかん）の間に**
 
 
 - since
@@ -3769,7 +3769,7 @@
 
 ---
 
-
+### ----------------------------
 
 ### 🥑英语的配角：副词及其他【123个】
 
