--- a/语言学/🥑1368个单词就够了.md
+++ b/语言学/🥑1368个单词就够了.md
@@ -7313,7 +7313,7 @@ drink：Take in liquid, for example water, milk or coffee, through your mouth.
 
 #### 具体名词：背下来就可以
 
-有关物的名词
+**有关物的名词**
 
 时间类
 
@@ -7451,7 +7451,7 @@ drink：Take in liquid, for example water, milk or coffee, through your mouth.
 
 *thing issue matter stuff object event*
 
-有关人的名词
+**有关人的名词**
 
 家庭角色类
 
@@ -7487,7 +7487,9 @@ drink：Take in liquid, for example water, milk or coffee, through your mouth.
 
 *document story report novel note text letter email blog list menu*
 
-rule：law grammar principle
+规则
+
+rule law grammar principle
 
 信息类
 
@@ -7497,43 +7499,61 @@ rule：law grammar principle
 
 *state condition environment*
 
-situation：mess balance peace emergency chance opportunity
+情形
+
+situation mess balance peace emergency chance opportunity
 
 行为类
 
 *act exercise practice test experiment lesson bath security attention focus step education advertisement treatment trick habit service business homework*
 
-job：task project challenge
+工作
 
-duty：responsibility fault
+job task project challenge
 
-performance：concert opera drama
+义务
 
-study：math art science philosophy psychology
+duty responsibility fault
 
-arrangement：deal insurance account engagement
+表演
 
-occasion：meeting interview party picnic wedding funeral barbecue ceremony
+performance concert opera drama
 
-money：profit income salary loan cash cost credit deposit price tax bill budget
+学习
+
+study math art science philosophy psychology
+
+安排
+
+arrangement deal insurance account engagement
+
+活动
+
+occasion meeting interview party picnic wedding funeral barbecue ceremony
+
+花费
+
+money profit income salary loan cash cost credit deposit price tax bill budget
 
 活动类
 
 *activity game discipline crime trade economy politics war trip fashion industry*
 
-sports：soccer football golf basketball race
+体育
+
+sports soccer football golf basketball race
 
 思想类
 
 *thought idea view theory religion*
 
-plan：strategy policy program
+计划
+
+plan strategy policy program
 
 整体类
 
-*network internet series career*
-
-system：language transport
+*network internet series career system language transport*
 
 其他类
 
@@ -7565,15 +7585,21 @@ system：language transport
 
 *mind spirit soul emotion*
 
-feeling：shame stress respect desire pain sense
+感受
+
+feeling shame stress respect desire pain sense
 
 力量
 
 *strength force*
 
-power：authority
+权利
 
-ability：sight intelligence memory skill
+power authority
+
+能力
+
+ability sight intelligence memory skill
 
 动物
 
@@ -7597,7 +7623,7 @@ ability：sight intelligence memory skill
 
 #### 属性类名词：你的状态
 
-静态属性
+**静态属性**
 
 形状
 
@@ -7613,7 +7639,11 @@ ability：sight intelligence memory skill
 
 *point line end*
 
-bottom middle top front back center corner left right direction：east west north south
+bottom middle top front back center corner left right 
+
+方向
+
+direction east west north south
 
 品质
 
@@ -7635,21 +7665,27 @@ bottom middle top front back center corner left right direction：east west nort
 
 *amount number measurement distance volume angle temperature*
 
-level：degree grade rank standard
+等级 
 
-rate：speed percentage
+level degree grade rank standard
+
+比率
+
+rate speed percentage
 
 类别
 
 *kind type*
 
-动态属性
+**动态属性**
 
 方式
 
 *form*
 
-way：behavior mood logic tradition culture style pattern relation manner
+方方法
+
+way behavior mood logic tradition culture style pattern relation manner
 
 原因
 
@@ -7677,123 +7713,217 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 #### 单纯型动词：广交天下朋友
 
-本源词
+**本源词**
 
 *be go come make*
 
-归属
+**归属**
 
-拥有某物　have
+拥有某物　
 
-得到某物　get
+have
 
-给出某物　give
+得到某物　
 
-拿到某物　take
+get
 
-终点位置
+给出某物　
 
-使到达某一位置　put
+give
 
-使轻轻到达某一位置　lay place
+拿到某物　
 
-使从其他位置到达说话者位置　bring
+take
 
-使从说话者位置到达其他位置　send
+**终点位置**
 
-使位置暂停改变　hold
+使到达某一位置　
 
-使位置保持不变　keep
+put
 
-位置保持不变　stay hang settle
+使轻轻到达某一位置　
 
-相互位置
+lay place
 
-一事物到另一事物上面　cover
+使从其他位置到达说话者位置　
 
-一事物到另一事物下面　support
+bring
 
-两事物混合　mix
+使从说话者位置到达其他位置　
 
-两事物互换　switch
+send
 
-两事物相连　link join connect stick tie
+使位置暂停改变　
 
-两事物相遇　meet
+hold
 
-两事物交叉　cross
+使位置保持不变　
 
-运动轨迹
+keep
 
-从一个点到另一个点　move shift
+位置保持不变　
 
-经过某个点　pass
+stay hang settle
 
-低点往高点　raise lift rise
+**相互位置**
 
-高点往低点　drop fall
+一事物到另一事物上面　
 
-一事物在另一事物后面　follow
+cover
 
-一事物在另一事物前面　lead
+一事物到另一事物下面　
 
-一物载另一物　carry
+support
 
-往复运动　bounce roll shake screw
+两事物混合　
 
-速度
+mix
 
-快速运动　run rush hurry
+两事物互换　
 
-力量
+switch
 
-轻轻接触　touch
+两事物相连　
 
-用力接触　hit knock crash
+link join connect stick tie
 
-使快速运动　throw
+两事物相遇　
 
-用力接触并来回移动　rub
+meet
 
-用力使事物脱离原来的位置　pull
+两事物交叉　
 
-对事物朝某一方向用力　push draw press
+cross
 
-空间
+**运动轨迹**
 
-空间开放或关闭　open close shut
+从一个点到另一个点　
 
-一事物进入某一空间　fit enter
+move shift
 
-一事物进入某一空间（气体或液体）　fill pump spill spray
+经过某个点　
 
-事物离开某一空间　clean clear wipe
+pass
 
-事物离开某一地点　leave quit
+低点往高点　
 
-一事物到达某一地点　arrive reach
+raise lift rise
 
-一事物固定在某一个空间　fix set
+高点往低点　
 
-时间
+drop fall
 
-某事发生　begin start happen
+一事物在另一事物后面　
 
-某事结束　finish
+follow
 
-某事停止　stop
+一事物在另一事物前面　
 
-方向
+lead
 
-一个方向到另一个方向　turn
+一物载另一物　
 
-整体与部分
+carry
 
-从大到小（用力）　break crack split tear
+往复运动　
 
-从大到小　divide
+bounce roll shake screw
 
-从多到少　cut
+**速度**
+
+快速运动　
+
+run rush hurry
+
+**力量**
+
+轻轻接触　
+
+touch
+
+用力接触　
+
+hit knock crash
+
+使快速运动　
+
+throw
+
+用力接触并来回移动　
+
+rub
+
+用力使事物脱离原来的位置　
+
+pull
+
+对事物朝某一方向用力　
+
+push draw press
+
+**空间**
+
+空间开放或关闭　
+
+open close shut
+
+一事物进入某一空间　
+
+fit enter
+
+一事物进入某一空间（气体或液体）　
+
+fill pump spill spray
+
+事物离开某一空间　
+
+clean clear wipe
+
+事物离开某一地点　
+
+leave quit
+
+一事物到达某一地点　
+
+arrive reach
+
+一事物固定在某一个空间　
+
+fix set
+
+**时间**
+
+某事发生　
+
+begin start happen
+
+某事结束　
+
+finish
+
+某事停止　
+
+stop
+
+**方向**
+
+一个方向到另一个方向　
+
+turn
+
+**整体与部分**
+
+从大到小（用力）　
+
+break crack split tear
+
+从大到小　
+
+divide
+
+从多到少　
+
+cut
 
 形状
 
@@ -7825,19 +7955,29 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 *find watch observe ignore search show*
 
-说
+**说**
 
-意见：agree cancel let allow
+意见
 
-告诉：claim warn introduce explain express confirm
+agree cancel let allow
 
-要求：beg charge order
+告诉
 
-带有情感地说：argue blame praise encourage complain promise insist shout threat
+claim warn introduce explain express confirm
 
-其他：answer call count pronounce
+要求
 
-想
+beg charge order
+
+带有情感地说
+
+argue blame praise encourage complain promise insist shout threat
+
+其他
+
+answer call count pronounce
+
+**想**
 
 *consider guess deserve offer*
 
@@ -7859,25 +7999,43 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 *die live burn boil*
 
-人体行为
+**人体行为**
 
-肢体：dance ride lie climb beat
+肢体
 
-上肢：hug
+dance ride lie climb beat
 
-下肢：sit stand walk kick jump skip
+上肢
 
-面部：smile laugh cry
+hug
 
-嘴巴：eat kiss suck lick blow cough sing
+下肢
 
-鼻子：breathe
+sit stand walk kick jump skip
 
-皮肤：bleed
+面部
 
-精神：sleep wake relax
+smile laugh cry
 
-健康：hurt injure cure inject
+嘴巴
+
+eat kiss suck lick blow cough sing
+
+鼻子
+
+breathe
+
+皮肤
+
+bleed
+
+精神
+
+sleep wake relax
+
+健康
+
+hurt injure cure inject
 
 生活行为
 
@@ -7935,7 +8093,7 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 #### 让感觉飞起来：形容词
 
-物的属性与构成
+**物的属性与构成**
 
 大小
 
@@ -8021,7 +8179,7 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 *loud quiet*
 
-人的属性与构成
+**人的属性与构成**
 
 时间
 
@@ -8055,7 +8213,7 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 *happy glad sad upset sorry guilty calm afraid angry crazy mad excited bored disappointed jealous lonely*
 
-事的属性与构成
+**事的属性与构成**
 
 难度
 
@@ -8077,7 +8235,7 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 *wrong strict correct proper lucky fair successful*
 
-综合属性
+**综合属性**
 
 品质（好）
 
@@ -8107,7 +8265,7 @@ way：behavior mood logic tradition culture style pattern relation manner
 
 *fun horrible weird strange comfortable incredible gross*
 
-事物关系
+**事物关系**
 
 特殊性
 
