--- a/学习/2024/其他.md
+++ b/学习/2024/其他.md
@@ -1,7 +1,18 @@
 [TOC]
 
+## 语言
+
+- **日本語の森** https://www.youtube.com/c/nihongonomori2013/videos
+
+
+
+
+
 ## 数学
 
 - https://space.bilibili.com/152254793/?spm_id_from=333.999.0.0
 - **猴博士爱讲课** https://space.bilibili.com/67907025/?spm_id_from=333.999.0.0
 - 
+
+
+
